--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "dotenv": "^8.2.0",
         "eslint": "^6.8.0"
     }
 }
