--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "devDependencies": {
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0"
+    },
+    "dependencies": {
+        "axios": "^0.19.2"
     }
 }
