--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "start": "node ./src/server.js",
+        "start:watch": "nodemon ./src/server.js"
     },
     "keywords": [],
     "author": "",
