--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "dotenv": "^8.2.0",
         "eslint": "^6.8.0"
     },
     "dependencies": {
-        "axios": "^0.19.2"
+        "axios": "^0.19.2",
+        "dotenv": "^8.2.0"
     }
 }
